--- a/sled_tasks/templates/sled_tasks/task_detail_recipient.html
+++ b/sled_tasks/templates/sled_tasks/task_detail_recipient.html
@@ -49,7 +49,7 @@
       </tr>
       <tr>
 	<td>Email:</td>
-	<td><a href="mailto:{{ task.owner.email }}">{{ task.owner.email }}</a></td>
+	<td><{{ task.owner.email|urlize }}</td>
       </tr>
       <tr>
 	<td>Affiliation:</td>
