--- a/sled_users/templates/sled_users/user_index.html
+++ b/sled_users/templates/sled_users/user_index.html
@@ -412,7 +412,7 @@
 	    {% include "pagination_top.html" with qset=imagings request=request qset_range=imagings_range qset_total=N_imagings_total target="imagings" %}
 
 	    <input name="obj_type" type="hidden" value="Imaging" />
-	    <table>
+	    <table class="items-list">
 	      <thead>
 		<tr>
 		  <th></th>
@@ -454,7 +454,7 @@
 		  <td>{{ imaging.instrument.name }}</td>
 		  <td>{{ imaging.band.name }}</td>
 		  <td>{{ imaging.date_taken }}</td>
-		  <td>{{ imaging.access_level }}</td>
+		  <td class="access-level">{{ imaging.access_level }}</td>
 		  <td>
 		    {{ imaging.getUsersWithAccessNoOwner|join:"," }} - <em>{{ imaging.getGroupsWithAccessNoOwner|join:"," }}</em>
 		  </td>
@@ -474,6 +474,7 @@
 		{% endfor %}
 	    </table>
 	    <button type="button" class="sled-toggle-all btn btn-sm btn-light" value="select">Toggle select all</button>
+	    <button type="button" class="sled-toggle-access btn btn-sm btn-light" value="PUB">Show PUB</button>
 	  </div>	 
 	  {% include "pagination_bottom.html" with qset=imagings request=request qset_range=imagings_range qset_total=N_imagings_total target="imagings" %}
 
@@ -548,7 +549,7 @@
 	    {% include "pagination_top.html" with qset=spectra request=request qset_range=spectra_range qset_total=N_spectra_total target="spectra" %}
 
 	    <input name="obj_type" type="hidden" value="Spectrum" />
-	    <table>
+	    <table class="items-list">
 	      <thead>
 		<tr>
 		  <th></th>
@@ -588,7 +589,7 @@
 		  </td>
 		  <td>{{ spectrum.instrument.name }}</td>
 		  <td>{{ spectrum.date_taken }}</td>
-		  <td>{{ spectrum.access_level }}</td>
+		  <td class="access-level">{{ spectrum.access_level }}</td>
 		  <td>
 		    {{ spectrum.getUsersWithAccessNoOwner|join:"," }} - <em>{{ spectrum.getGroupsWithAccessNoOwner|join:"," }}</em>
 		  </td>
@@ -609,6 +610,7 @@
 	      </tbody>
 	    </table>
 	    <button type="button" class="sled-toggle-all btn btn-sm btn-light" value="select">Toggle select all</button>
+	    <button type="button" class="sled-toggle-access btn btn-sm btn-light" value="PUB">Show PUB</button>
 	  </div>	 
 	  {% include "pagination_bottom.html" with qset=spectra request=request qset_range=spectra_range qset_total=N_spectra_total target="spectra" %}
 
@@ -683,7 +685,7 @@
 	    {% include "pagination_top.html" with qset=catalogues request=request qset_range=catalogues_range qset_total=N_catalogues_total target="catalogues" %}
 
 	    <input name="obj_type" type="hidden" value="Catalogue" />
-	    <table>
+	    <table class="items-list">
 	      <thead>
 		<tr>
 		  <th></th>
@@ -712,7 +714,7 @@
 		  <td>{{ catalogue.instrument.name }}</td>
 		  <td>{{ catalogue.band.name }}</td>
 		  <td>{{ catalogue.date_taken }}</td>
-		  <td>{{ catalogue.access_level }}</td>
+		  <td class="access-level">{{ catalogue.access_level }}</td>
 		  <td>
 		    {{ catalogue.getUsersWithAccessNoOwner|join:"," }} - <em>{{ catalogue.getGroupsWithAccessNoOwner|join:"," }}</em>
 		  </td>
@@ -732,6 +734,7 @@
 		{% endfor %}
 	    </table>
 	    <button type="button" class="sled-toggle-all btn btn-sm btn-light" value="select">Toggle select all</button>
+	    <button type="button" class="sled-toggle-access btn btn-sm btn-light" value="PUB">Show PUB</button>
 	  </div>	 
 	  {% include "pagination_bottom.html" with qset=catalogues request=request qset_range=catalogues_range qset_total=N_catalogues_total target="catalogues" %}
 
@@ -804,7 +807,7 @@
 	    {% include "pagination_top.html" with qset=redshifts request=request qset_range=redshifts_range qset_total=N_redshifts_total target="redshifts" %}
 	    
 	    <input name="obj_type" type="hidden" value="Redshift" />
-	    <table>
+	    <table class="items-list">
 	      <thead>
 		<tr>
 		  <th></th>
@@ -860,7 +863,7 @@
 		  <td>
 		    {{ redshift.info }}
 		  </td>
-		  <td>
+		  <td class="access-level">
 		    {{ redshift.access_level }}
 		  </td>
 		  <td>
@@ -879,6 +882,7 @@
 	      </tbody>
 	    </table>
 	    <button type="button" class="sled-toggle-all btn btn-sm btn-light" value="select">Toggle select all</button>
+	    <button type="button" class="sled-toggle-access btn btn-sm btn-light" value="PUB">Show PUB</button>
 	  </div>	 
 	  {% include "pagination_bottom.html" with qset=redshifts request=request qset_range=redshifts_range qset_total=N_redshifts_total target="redshifts" %}
 	  
@@ -947,7 +951,7 @@
 	    {% include "pagination_top.html" with qset=generic_images request=request qset_range=generic_images_range qset_total=N_generic_images_total target="generic-images" %}
 	    
 	    <input name="obj_type" type="hidden" value="GenericImage" />
-	    <table>
+	    <table class="items-list">
 	      <thead>
 		<tr>
 		  <th></th>
@@ -985,7 +989,7 @@
 		  <td>
 		    {{ generic_image.info }}
 		  </td>
-		  <td>
+		  <td class="access-level">
 		    {{ generic_image.access_level }}
 		  </td>
 		  <td>
@@ -1003,6 +1007,7 @@
 		{% endfor %}
 	    </table>
 	    <button type="button" class="sled-toggle-all btn btn-sm btn-light" value="select">Toggle select all</button>
+	    <button type="button" class="sled-toggle-access btn btn-sm btn-light" value="PUB">Show PUB</button>
 	  </div>	 
 	  {% include "pagination_bottom.html" with qset=generic_images request=request qset_range=generic_image_range qset_total=N_generic_image_total target="generic-images" %}
 	  
