--- a/sled_users/templates/sled_users/user_query.html
+++ b/sled_users/templates/sled_users/user_query.html
@@ -4,6 +4,8 @@
 
 
 {% block content %}
+{% include "modal_container.html" %}
+
 <div class="jb-container">
 
   <h1 class="jb-heading-1">Search Users</h1>
@@ -35,7 +37,7 @@
 
   <div>
     {% for user in users %}
-    {% include "sled_users/user_visit_card_content.html" with sled_user=user%}
+    {% include "sled_users/user_visit_card_content.html" with sled_user=user %}
     {% endfor %}
   </div>
 
@@ -58,6 +60,8 @@
 
 
 {% block extrascripts %}
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
+<script src="{% static 'js/jquery.bootstrap.modal.forms.js' %}"></script>
 <script type="text/javascript">
   $(document).ready(function(){
       $(".sled_submit").click(function(e) {
@@ -66,6 +70,13 @@
 	  var page = dum[1].replace('#','');
 	  $('#id_page').val(page);
 	  $('#mysubmit').trigger('click');
+      });
+
+      $(".sled-modal").each(function() {
+	  $(this).modalForm({
+              formURL: $(this).data("form-url"),
+              modalID: "#id-modal"
+	  });
       });
   });
 </script>
