--- a/sled_users/templates/sled_users/user_visit_card.html
+++ b/sled_users/templates/sled_users/user_visit_card.html
@@ -4,6 +4,8 @@
 
 
 {% block content %}
+{% include "modal_container.html" %}
+
 {% include "sled_users/user_visit_card_content.html" with sled_user=sled_user %}
 {% endblock content %}
 
@@ -13,3 +15,19 @@
   .header-table td {border-top:none}
 </style>
 {% endblock extrastyles %}
+
+
+{% block extrascripts %}
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
+<script src="{% static 'js/jquery.bootstrap.modal.forms.js' %}"></script>
+<script type="text/javascript">
+  $(document).ready(function(){
+      $(".sled-modal").each(function() {
+	  $(this).modalForm({
+              formURL: $(this).data("form-url"),
+              modalID: "#id-modal"
+	  });
+      });
+  });
+</script>
+{% endblock extrascripts %}
