--- a/sled_limits/templates/sled_limits/limits_and_roles_update.html
+++ b/sled_limits/templates/sled_limits/limits_and_roles_update.html
@@ -14,7 +14,7 @@ Update limits and roles
   <div class="invalid jb-modal-field">
     <ul>
       {% for error in form.non_field_errors %}
-      <li>{{ error }}</li>
+      <li>{{ error|safe }}</li>
       {% endfor %}
     </ul>
   </div>
@@ -29,7 +29,7 @@ Update limits and roles
 	    <div class="invalid jb-modal-field">
 	      <ul>
 		{% for error in field.errors %}
-		<li>{{ error }}</li>
+		<li>{{ error|safe }}</li>
 		{% endfor %}
 	      </ul>
 	    </div>
