--- a/sled_tasks/templates/sled_tasks/task_list.html
+++ b/sled_tasks/templates/sled_tasks/task_list.html
@@ -83,6 +83,11 @@
 		<img src="{% static 'icons/eye-fill.svg' %}">
 		View
 	      </button>
+	      {% elif task.task_type == 'InspectImages' %}
+	      <button type="button" id="view-task" class="sled-modal jb-submit-button-1" data-form-url="{% url 'sled_tasks:tasks-detail-inspect-owner' task.id %}">
+		<img src="{% static 'icons/eye-fill.svg' %}">
+		View
+	      </button>
 	      {% elif task.task_type == 'ResolveDuplicates' and task.status == "C" %}
 	      <button type="button" id="view-task" class="sled-modal jb-submit-button-1" data-form-url="{% url 'sled_tasks:tasks-detail-resolve-duplicates-complete' task.id %}">
 		<img src="{% static 'icons/eye-fill.svg' %}">
