--- a/sled_tasks/templates/sled_tasks/task_list_pending.html
+++ b/sled_tasks/templates/sled_tasks/task_list_pending.html
@@ -54,6 +54,22 @@
 	    Resolve
 	  </button>	
 	</form>
+
+	{% elif task.task_type == 'InspectImages' %}
+
+	{% if user == task.owner %}
+	<button type="button" id="view-task" class="sled-modal jb-submit-button-1" data-form-url="{% url 'sled_tasks:tasks-detail-owner' task.id %}">
+	  <img src="{% static 'icons/eye-fill.svg' %}">
+	  View
+	</button>
+	{% else %}
+	<form action="{% url 'sled_tasks:tasks-detail-inspect' task.id %}">
+	  <button type="submit" class="jb-submit-button-1">
+            <img src="{% static 'icons/search.svg' %}">
+            Inspect
+	  </button>
+	</form>
+	{% endif %}
 	
 	{% else %}
 
